start of assign 3, comp5426 notes

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -226,7 +226,7 @@ keywords = "Adaptive software"
 @book{sdfBook,
 	title={{Software Synthesis from Dataflow Graphs}},
 	author={Shuvra S. Battacharyya and Praveen K. Murthy and Edward A. Lee},
-	address={101 Philip Drive \\ Assinippi Park \\ Norwell, Massachusetts 02061 USA},
+	address={101 Philip Drive, Assinippi Park, Norwell Massachusetts 02061 USA},
 	edition={First},
 	publisher={Kluwer Academic Publishers},
 	year={1996}
