--- a/hons/docs/assign3.tex
+++ b/hons/docs/assign3.tex
@@ -1,5 +1,5 @@
 \documentstyle{article}
-
+ty
 \author{Nic Hollingum - 308193415}
 \title{Research Methods - Assignment 3}
 
@@ -7,32 +7,57 @@
 
 \maketitle
 
-
 \section{Literature Review}
 
 this is so much unwin.
 
-\subsection{SDF}
+OLP \cite{hen99}
 
-This reference \cite{rofl} shouldn't work.
-This one works though \cite{sdfBook}.
-Run out the line so we can at least get a newline.
+Byzantine \cite{lam86}
 
-Now for a biiiig citation \cite{ran75} woops.
-I wonder if we were to keep on writing what would happen.
-I really should read \cite{sih91}.
-Maybe i should write one of those meta-ethics tritisms here.
-What does inproceedings \cite{son10} look like?
+Distributed Clocks \cite{lam78}
+
+\subsection{SDF and Other Models}
+
+SDF Book \cite{sdfBook}
+
+Streamit \cite{theis02}
+
+Static sdf nullspace \cite{lee87}
+
+Lustre \cite{cas87}
+
+Stream characterization \cite{theis10}
+
+Distributed Java \cite{par03}
+
+Google Mapreduce \cite{dea08}
+
+multi-mapreduce \cite{ran07}
 
 \subsection{Scheduling}
 
+cloud dataflow \cite{tsa09}
+
+Orchestrating Streamit \cite{mal08}
+
+Scheduling Heuristic comparisaon \cite{Kha94}
+
+Functional partitioning \cite{li10}
+
+Energy minimization \cite{boy01}
+
+hetrogeneous scheduling \cite{len87}
 
 \subsection{Fault Tolerance}
 
+software fault-tolerance \cite{ran75}
+
+reliability challenges \cite{ree06}
+
+mobile grid fault tolerance\cite{lit07}
 
 \section{Research Proposal}
-
-MOAR unwin.
 
 \bibliographystyle{plain}
 \bibliography{biblio}
