advanced algos notes 10

--- a/hons/docs/assign3.tex
+++ b/hons/docs/assign3.tex
@@ -1,5 +1,5 @@
 \documentstyle{article}
-ty
+
 \author{Nic Hollingum - 308193415}
 \title{Research Methods - Assignment 3}
 
@@ -7,27 +7,23 @@ ty
 
 \maketitle
 
-\section{Literature Review}
+\section*{Literature Review}
 
 this is so much unwin.
 
 OLP \cite{hen99}
 
-Byzantine \cite{lam86}
-
-Distributed Clocks \cite{lam78}
-
-\subsection{SDF and Other Models}
+\subsection*{SDF and Other Models}
 
 SDF Book \cite{sdfBook}
 
-Streamit \cite{theis02}
+Streamit \cite{thies02}
 
 Static sdf nullspace \cite{lee87}
 
 Lustre \cite{cas87}
 
-Stream characterization \cite{theis10}
+Stream characterization \cite{thies10}
 
 Distributed Java \cite{par03}
 
@@ -35,7 +31,7 @@ Google Mapreduce \cite{dea08}
 
 multi-mapreduce \cite{ran07}
 
-\subsection{Scheduling}
+\subsection*{Scheduling}
 
 cloud dataflow \cite{tsa09}
 
@@ -49,7 +45,11 @@ Energy minimization \cite{boy01}
 
 hetrogeneous scheduling \cite{len87}
 
-\subsection{Fault Tolerance}
+Distributed Clocks \cite{lam78}
+
+\subsection*{Fault Tolerance}
+
+Byzantine \cite{lam86}
 
 software fault-tolerance \cite{ran75}
 
@@ -57,7 +57,7 @@ reliability challenges \cite{ree06}
 
 mobile grid fault tolerance\cite{lit07}
 
-\section{Research Proposal}
+\section*{Research Proposal}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
