--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -50,6 +50,26 @@
   publisher={Springer}
 }
 
+%the original work
+@article{kar66,
+     jstor_articletype = {research-article},
+     title = {Properties of a Model for Parallel Computations: Determinancy, Termination, Queueing},
+     author = {Karp, Richard M. and Miller, Raymond E.},
+     journal = {SIAM Journal on Applied Mathematics},
+     jstor_issuetitle = {},
+     volume = {14},
+     number = {6},
+     jstor_formatteddate = {Nov., 1966},
+     pages = {pp. 1390-1411},
+     url = {http://www.jstor.org/stable/2946247},
+     ISSN = {00361399},
+     abstract = {This paper gives a graph-theoretic model for the description and analysis of parallel computations. Within the model, computation steps correspond to nodes of a graph, and dependency between computation steps is represented by branches with which queues of data are associated. First, it is shown that each such computation graph G represents a unique computation, determined independently of operation times. Next, methods of determining whether such a computation terminates and of finding the number of performances of each computation step are developed. The maximal strongly connected subgraphs of G and the loops within these subgraphs play a central role in this analysis. For example, use is made of the result that either every computation step within a strongly connected subgraph of G is performed an infinite number of times, or none is. Finally, necessary and sufficient conditions for the lengths of data queues to remain bounded are derived.},
+     language = {English},
+     year = {1966},
+     publisher = {Society for Industrial and Applied Mathematics},
+     copyright = {Copyright © 1966 Society for Industrial and Applied Mathematics},
+}
+
 %random google scholar article
 @article{kha94,
   title={{A comparison of multiprocessor scheduling heuristics}},
@@ -174,6 +194,12 @@ keywords = "Grid computing"
   issn={1530-2075},
   year={2003},
   publisher={IEEE Computer Society}
+}
+
+@article{pen09,
+  title={S-Net Language Report},
+  author={Penczek, F. and Grelck, C. and Cai, H. and Julku, J. and H{\\"o}lzenspies, P. and Scholz, S.B. and Shafarenko, A.},
+  year={2009}
 }
 
 @article{ran75,
