--- a/hons/docs/assign3.tex
+++ b/hons/docs/assign3.tex
@@ -42,19 +42,40 @@ This is a necessary distinction, since it doesnt actually matter the physical ti
 Lamport defines a ``happened before'' relationship among processes which imposes a partial ordering of the system at the level of processes, whereas in LUSTRE data precedence is defined by an incremental counter (called the clock) assigned in a tuple with each data item.
 Both process and data clocking is important in SDF implementations, processes must not execute before they have data to execute on, and data must not be consumed or produced out-of-order.
 
+Given a partial ordering of data items and processes on distributed systems in general and SDF-like systems specifically, we are now able to explot the parallelism inherant in SDF.
+A simplistic means of doing this is to assign actors to processors, in a similar fashion to \cite{par03}.
+The distributed process networks described in that paper have the ability to scale well with instance size, given sufficiently good load balancing.
+However that paper only deals with worker count, in the hope of data independance and stateless processes.
+The paper therefore deals more with buffer management and load balancing, in order to achieve ``Embarrasing parallelism''.
+Embarassingly parallel programs are programs with no data interdependencies (i.e. unordered) and no process states (in our case, statless actors).
+This presumption is not allowed in general for SDF programs, whose actors can have arbitary state and whose tokens are necessarily ordered.
+This is not a problem for the most well known massively-parallel paradigm, MapReduce.
+MapReduce is quite a common industry tool these days for large scale data-crunching, as described in \cite{dea08}.
+Much of the work goes into distributed-memory grid/cloud systems, however implementations such as PHOENIX \cite{ran07} demonstrate the paradigm's viability for shared-memory multithread systems.
 
-
-Distributed Java \cite{par03}
-
-Google Mapreduce \cite{dea08}
-
-multi-mapreduce \cite{ran07}
-
-Distributed Clocks \cite{lam78}
-
-cloud dataflow \cite{tsa09}
+We shall examine these systems with regard to efficiency and fault-tolerance  in later sections of the review.
 
 \subsection*{Scheduling}
+
+Scheduling, especially parallel scheduling, is in the NP-Hard class of problems \cite{len87, kha94}, most intuitively shown by a reduction to multi-knapsack by Litke et al. in \cite{lit07}.
+We must therefore consider heuristic and approximation approaches to the problem.
+More specifically, our problem involves a 3-way optimization of the scheduling goal: makespan, communication cost and fault tolerance.
+Since fault tolerance is more of a constraint than an optimization goal, we shall ignore it for now.
+
+Optimizing for makespan alone is the simpler of the two remaining issues.
+We use te procedure outlined by Lenstra and Tardos in \cite{len87}.
+This paper describes the linear relaxation of an integer programme which computes an exact solution to the makespan problem.
+Whilst the integrality constraint makes the problem NP-Hard, the relaxation is $O(n^2)$ and so computing an actor-processor assignment mapping can be done in a reasonable ammount of time.
+The Heuristic bound for the procedure they describe is 2, with $3/2$ being the absolute heuristic bound, times as bad as the optimal assignment in the worst case.
+This bound is shown by representing the mapping problem as a bipartite graph.
+
+Whilst this assignment is acceptable for most applications it makes an unreasonable assumption for us and imposes an unreasonable requirement.
+Namely it presumes that processors can communicate with each other instantaneously, and that we are allowd to do as much inter-processor communication as we like.
+However our problem permits neither of these.
+The algorithm described by Boykov et al. in \cite{boy01}, whilst apparently unrelated (image segmentation), allows us to schedule to minimize communication cost.
+This formulation is an ILP once again, however the proof of the approximation bound (again 2 times the optimal) is shown as a multiway cut problem.
+
+
 
 Orchestrating Streamit \cite{mal08}
 
@@ -68,6 +89,8 @@ hetrogeneous scheduling \cite{len87}
 
 OLP \cite{hen99}
 
+cloud dataflow \cite{tsa09}
+
 \subsection*{Fault Tolerance}
 
 Byzantine \cite{lam86}
@@ -77,6 +100,20 @@ software fault-tolerance \cite{ran75}
 reliability challenges \cite{ree06}
 
 mobile grid fault tolerance\cite{lit07}
+
+
+
+We examine the history and implementations of SDF and similar parallel paradigms so as to determine the strengths and weaknesses of these systems.
+We are mainly concerned with fault tolerance.
+The early implementations such as LUSTRE \cite{cas87} do not even mention fault-tolerance, possibly due to a dirth of distributed systems at the time.
+Indeed the notion of fault tolerance was relatively new at the time \cite{ran75}.
+For the modern implementations we look at S-Net, StreaMIT and MapReduce and their descriptionf of ``fault tolerance''.
+In later sections of the literature review we shall specify this concept more formally.
+\begin{itemize}
+	\item S-Net provides little by way of fault tolerance \cite{pen09}.  
+	\item{StreaMIT} ascskdbvksdn.
+	\item{MapReduce}dk dkcnsdk dkjcskdbck.
+\end{itemize}
 
 \section*{Research Proposal}
 
